2010-08-30 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/C/nact-starting.xml: Update manual.

	* doc/nact/C/figures/read-only.png: New file.

	* doc/nact/Makefile.am: Remove '$(NULL)' expressions.

	* configure.ac: Bump version number after unstable release.

2010-08-23 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Update NEWS before unstable release.

	* src/core/na-selected-info.c
	(na_selected_info_get_list_from_item, na_selected_info_get_list_from_list):
	Returns a null list when NASelectedInfo object is null.

	* src/plugin-menu/nautilus-actions.c
	(menu_provider_get_background_items, menu_provider_get_file_items,
	menu_provider_get_toolbar_items):
	Do not try to build a menu for Nautilus when NASelectedInfo list is empty.

	* configure.ac: Bump version number after unstable release.

	* NEWS: Update NEWS before unstable release.

	* po/POTFILES.in: Add src/core/na-selected-info.c file.

	* src/core/na-selected-info.c (query_file_attributes):
	Make the error message translatable.


	* src/core/na-tokens.c
	(na_tokens_new_from_selection): Do not get dirname of a null filename.
	(parse_singular): Take care of possibly null data or over-indexing.

	* src/core/na-selected-info.c:
	* src/core/na-selected-info.h (na_selected_info_create_for_uri):
	Add errmsg parameter to check for incorrect URIs.

	* src/utils/nautilus-actions-run.c (get_selection_from_strv):
	Do not try to deal with malformed URIs.

	* src/utils/nautilus-actions-schemas.c: Include glib-object.h.

	* src/api/na-data-boxed.h: Revert to glib-object.h.

2010-08-22 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext.c (is_candidate_for_mimetypes):
	* src/core/na-selected-info.c (na_selected_info_get_mime_type):
	Take care of possibly NULL mimetype.

2010-08-21 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-dbus.h
	* src/api/na-ifactory-provider-provider.h
	* src/core/na-importer-ask.h
	* src/io-desktop/nadp-formats.h
	* src/io-desktop/nadp-reader.h
	* src/io-desktop/nadp-utils.h