@@ -1,3 +1,10 @@
+2010-09-02 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_write):
+	Do not return TRUE if file has not been written due to dispose state.
+
+	* configure.ac: Setup the package URL.
+
 2010-08-30 Pierre Wieser <pwieser@trychlos.org>
 
 	* doc/nact/C/nact-starting.xml: Update manual.
